--- a/_includes/list.html
+++ b/_includes/list.html
@@ -21,8 +21,11 @@
 
   {% for d in data %}
     {% assign style = d.style | default: include.style %}
-
-    {%- include {{ include.component | append: ".html" }}
+{% comment %}
+   CRITICAL: The line below must touch the left edge.
+   NO spaces before {%- include
+{% endcomment %}
+{%- include {{ include.component | append: ".html" }}
       affiliation=d.affiliation
       author=d.author
       authors=d.authors
