--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -28,9 +28,9 @@ layout: default
   | array_filter
 %}
 
-{% capture search -%}
-  research/?search={% for alias in aliases %}"{{ alias }}" {% endfor %}
-{%- endcapture %}
+<!--{% capture search -%}-->
+<!--  research/?search={% for alias in aliases %}"{{ alias }}" {% endfor %}-->
+<!--{%- endcapture %}-->
 
 <!--<p class="center">-->
 <!--  <a href="{{ search | relative_url | uri_escape }}">-->
@@ -38,9 +38,9 @@ layout: default
 <!--  </a>-->
 <!--</p>-->
 
-{% capture search -%}
-  blog/?search={{ page.name }}
-{%- endcapture %}
+<!--{% capture search -%}-->
+<!--  blog/?search={{ page.name }}-->
+<!--{%- endcapture %}-->
 
 <!--
 <p class="center">
