--- a/_includes/fonts.html
+++ b/_includes/fonts.html
@@ -5,7 +5,9 @@
 <link href="{{ googlefonts }}" rel="stylesheet">
 
 <!-- Font Awesome icons (load asynchronously due to size) -->
-{% assign fontawesome = "https://use.fontawesome.com/releases/v6.7.0/css/all.css" %}
+<!--{% assign fontawesome = "https://use.fontawesome.com/releases/v6.7.0/css/all.css" %}-->
+{% assign fontawesome = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" %}
+<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">-->
 <link
   href="{{ fontawesome }}"
   rel="stylesheet"
