--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,5 +1,5 @@
 {{ " " }}
-<div class="card" data-style="{{ include.style }}" style="min-width: 100%; width: 100%;">
+<div class="card" data-style="{{ include.style }}">
   <a
     {% if include.link %}
       href="{{ include.link | relative_url | uri_escape }}"
