--- a/_includes/card.html
+++ b/_includes/card.html
@@ -40,7 +40,7 @@
     {% endif %}
 
     {% if include.description %}
-      <p>
+      <p style="text-align: left; line-height: 1.6; margin-top: 0.5rem; color: #4a4a4a;">
         {{ include.description | markdownify | remove: "<p>" | remove: "</p>" }}
       </p>
     {% endif %}
