--- a/_includes/list.html
+++ b/_includes/list.html
@@ -35,6 +35,8 @@
       height=d.height
       icon=d.icon
       id=d.id
+      homepage=d.homepage
+      links=d.links
       image=d.image
       last_modified_at=d.last_modified_at
       link=d.link
