--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -65,7 +65,8 @@
         </span>
         &nbsp;·&nbsp;
         <span class="citation-date">
-          {{- citation.date | default: "[no date info]" | date: "%d %b %Y" -}}
+          {{- citation.date | default: "[no date info]" | date: "%Y" -}}
+<!--            "%d %b %Y"-->
         </span>
         &nbsp;·&nbsp;
         <span class="citation-id">
