updated date format in citations

--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -18,12 +18,21 @@
         class="citation-image"
         aria-label="{{ citation.title | default: "citation link" | regex_strip }}"
       >
+      <img
+          src="/images/research/{{ citation.image | split: '/' | last }}"
+          alt="{{ citation.title | default: "citation image" }}"
+          loading="lazy"
+          style="max-width: 100%; height: auto;"
+          onerror="this.style.display='none'"
+        >
+      {% comment %}
         <img
           src="{{ citation.image | relative_url | uri_escape }}"
           alt="{{ citation.title | default: "citation image" | regex_strip }}"
           loading="lazy"
           {% include fallback.html %}
         >
+      {% endcomment %}
       </a>
     {% endif %}
 
