--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -17,6 +17,7 @@
         {% endif %}
         class="citation-image"
         aria-label="{{ citation.title | default: "citation link" | regex_strip }}"
+        style="margin-left: 15px;"
       >
             {% comment %}
       <img
