--- a/_includes/card.html
+++ b/_includes/card.html
@@ -45,7 +45,7 @@
     {% endif %}
 
     {% if include.description %}
-      <p style="text-align: left; line-height: 1.6; margin-top: 0.5rem; color: #4a4a4a;">
+      <p style="text-align: left; line-height: 1.6; margin-top: 0.5rem; color: var(--gray);">
         {{ include.description | markdownify | remove: "<p>" | remove: "</p>" }}
       </p>
     {% endif %}
