--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 {% assign image = page.header | default: site.header %}
-{% assign dark = page.header-dark | is_nil: site.header-dark | is_nil: true %}
+{% assign dark = page.header-dark | is_nil: site.header-dark | is_nil: false %}
 
 {% assign svg = "images/logo.svg" | file_exists %}
 {% assign png = "images/logo.png" | file_exists %}
@@ -7,8 +7,6 @@
 {% assign logo = svg | default: png | default: jpg | default: nil %}
 
 <header
-  class="background"
-  style="--image: url('{{ image | relative_url | uri_escape }}')"
   {% if dark == true or dark == false %}
     data-dark="{{ dark }}"
   {% endif %}
@@ -18,11 +16,11 @@
 >
   <a href="{{ "/" | relative_url }}" class="home">
     {% if logo %}
-      <span class="logo">
+      <span class="logo" style="width: 120px; max-height: none; height: auto; display: flex; align-items: center;">
         {% if svg %}
           {{ svg | file_read }}
         {% else %}
-          <img src="{{ logo | relative_url | uri_escape }}" alt="logo">
+          <img src="{{ logo | relative_url | uri_escape }}" alt="logo" style="width: 100%; height: auto; max-height: none;">
         {% endif %}
       </span>
     {% endif %}
