--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,8 @@
   {% if page.url == "/" %}
     data-big
   {% endif %}
+  /* ADDED: Solid white background so content doesn't show through */
+  style="background: #ffffff; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.05);"
 >
   <a href="{{ "/" | relative_url }}" class="home">
     {% if logo %}
