--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,9 @@
 {% assign dark = page.header-dark | is_nil: site.header-dark | is_nil: false %}
 
 {% assign svg = "images/logo.svg" | file_exists %}
-{% assign png = "images/logo.png" | file_exists %}
+{% assign png = "images/cropped_header_logo.png" | file_exists %}
 {% assign jpg = "images/logo.jpg" | file_exists %}
-{% assign logo = svg | default: png | default: jpg | default: nil %}
+{% assign logo = png | default: svg | default: jpg | default: nil %}
 
 <header
   {% if dark == true or dark == false %}
