--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,9 @@
 {% assign dark = page.header-dark | is_nil: site.header-dark | is_nil: false %}
 
 {% assign svg = "images/logo.svg" | file_exists %}
-{% assign png = "images/logo.png" | file_exists %}
+{% assign png = "images/cropped_header_logo1.png" | file_exists %}
 {% assign jpg = "images/logo.jpg" | file_exists %}
-{% assign logo = svg | default: png | default: jpg | default: nil %}
+{% assign logo = png | default: svg | default: jpg | default: nil %}
 
 <header
   {% if dark == true or dark == false %}
@@ -17,7 +17,7 @@
      - box-shadow: 0 4px 20px rgba(0,0,0,0.4);
        (4px down, 20px blur, 40% opacity black)
   */
-  style="background: #000000; position: sticky; top: 0; z-index: 1000; box-shadow: 0 4px 20px rgba(0,0,0,0.4); padding: 0; display: flex; align-items: stretch; height: auto !important;"
+  style="background: #ffffff; position: sticky; top: 0; z-index: 1000; box-shadow: 0 4px 20px rgba(0,0,0,0.4); padding: 0; display: flex; align-items: stretch; height: auto !important;"
 >
 
 
