--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,7 @@
 {% assign image = page.header | default: site.header %}
 {% assign dark = page.header-dark | is_nil: site.header-dark | is_nil: false %}
 
-{% assign svg = "images/logo.svg" | file_exists %}
-{% assign png = "images/cropped_header_logo1.png" | file_exists %}
-{% assign jpg = "images/logo.jpg" | file_exists %}
-{% assign logo = png | default: svg | default: jpg | default: nil %}
+{% assign logo = "images/cropped_header_logo1.png" %}
 
 <header
   {% if dark == true or dark == false %}
